--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </script>
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freelance Task</title>
   </head>
